--- a/app.csproj
+++ b/app.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.13" />
     <PackageReference Include="MySql.Data" Version="8.2.0" />
   </ItemGroup>
 
